--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <header>Employee_management_site</header>
+    <h1>Hello World</h1>
+    <h2>Welcome</h2>
     
 </body>
 </html>
