--- a/login.html
+++ b/login.html
@@ -10,11 +10,11 @@
   <!-- component -->
 <div class="bg-gray-700 flex items-center justify-center h-screen">
   <div class="bg-black p-8 rounded-lg shadow-lg max-w-sm w-full">
-      <div class="flex items-center justift-center space-x-2 mb-6 text-white">
+      <div class="flex items-center justify-center space-x-4 mb-6 text-white">
           
           <h1 class="text-xl font-extrabold items-center justify-content-center"> Login</h1>
       </div>
-      <form id="changePasswordForm" class="space-y-6">
+      <form id="changePasswordForm" class="space-y-6 ">
           <div>
               <label for="email" class="text-sm font-medium text-white block mb-2">Email*</label>
               <input type="email" id="email" class="password-input form-input block w-full border border-gray-300 rounded-md shadow-sm" required>
