--- a/signup.html
+++ b/signup.html
@@ -9,7 +9,7 @@
 <body>
   <!-- component -->
 <div class="bg-gray-700 flex items-center justify-center h-screen">
-  <div class="bg-black-900 p-8 rounded-lg shadow-lg max-w-sm w-full">
+  <div class="bg-black p-8 rounded-lg shadow-lg max-w-sm w-full">
       <div class="flex items-center justify-center space-x-2 mb-6 text-white">
         
           <h1 class="text-xl font-extrabold items-center justify-content-center">sign up</h1>
